force-app/main/default/objects/IDM_Settings__c/IDM_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>IDM API end points, credentials</description>
    <label>IDM : Settings</label>
</CustomObject>