force-app/main/default/objects/IDM_Settings__c/fields/API_endpoint__c.field-meta.xml
<CustomField>
    <fullName>API_endpoint__c</fullName>
    <description>IDM API end point</description>
    <label>API_endpoint</label>
    <required>true</required>
    <type>Url</type>
</CustomField>