force-app/main/default/objects/IDM_Settings__c/fields/API_HTTPReq_timeout__c.field-meta.xml
<CustomField>
    <fullName>API_HTTPReq_timeout__c</fullName>
    <defaultValue>60000</defaultValue>
    <description>HTTPRequest timeout limit from SFDC calls</description>
    <label>API_HTTPReq_timeout</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>