force-app/main/default/objects/IDM_Settings__c/fields/BATCHJOB_BATCH_SIZE__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_BATCH_SIZE__c</fullName>
    <description>BATCH JOB: Number of records per batch to be processed in batch job</description>
    <inlineHelpText>BATCH JOB: Number of records per batch to be processed in batch job</inlineHelpText>
    <label>BATCHJOB_BATCH_SIZE</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>