force-app/main/default/objects/IDM_Settings__c/fields/BATCHJOB_RECUR__c.field-meta.xml
<CustomField>
    <fullName>BATCHJOB_RECUR__c</fullName>
    <description>Batch Job: Recurring time - the next time the job will run (Now + Recurring Time) in minutes</description>
    <inlineHelpText>Batch Job: Recurring time - the next time the job will run (Now + Recurring Time) in minutes</inlineHelpText>
    <label>BATCHJOB_RECUR</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>