force-app/main/default/objects/IDM_Settings__c/fields/ESP_SFDC_Profile__c.field-meta.xml
<CustomField>
    <fullName>ESP_SFDC_Profile__c</fullName>
    <defaultValue>&quot;ESP Community User&quot;</defaultValue>
    <description>ESP : Service Cloud profile for external users</description>
    <inlineHelpText>ESP : Service Cloud profile for external users</inlineHelpText>
    <label>ESP_SFDC_Profile</label>
    <length>25</length>
    <type>Text</type>
</CustomField>