force-app/main/default/objects/IDM_Settings__c/fields/SOCRM_Email_Template_Category__c.field-meta.xml
<CustomField>
    <fullName>SOCRM_Email_Template_Category__c</fullName>
    <description>Email Template Category used for SOCRM Users
Used from the batch job</description>
    <inlineHelpText>Email Template Category used for SOCRM Users</inlineHelpText>
    <label>SOCRM_Email_Template_Category</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>