force-app/main/default/objects/IDM_Settings__c/fields/SOCRM_IDM_Role__c.field-meta.xml
<CustomField>
    <fullName>SOCRM_IDM_Role__c</fullName>
    <description>Role name for IDM Users who needs to access SOCRM
Used from the batch job</description>
    <inlineHelpText>Role name for IDM Users who needs to access SOCRM</inlineHelpText>
    <label>SOCRM_IDM_Role</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>