force-app/main/default/objects/IDM_Settings__c/fields/SOCRM_SFDC_Profiles__c.field-meta.xml
<CustomField>
    <fullName>SOCRM_SFDC_Profiles__c</fullName>
    <defaultValue>&quot;NPN Partner Community(LOGIN); NPN Partner Community(NAMED); Marketing Customer Community; Community Lite Profile&quot;</defaultValue>
    <description>All profiles that needs to have access to NPN Community semicolon separated e.g., NPN Partner Community(LOGIN); NPN Partner Community(NAMED); Marketing Customer Community; Community Lite Profile</description>
    <inlineHelpText>All profiles that needs to have access to NPN Community semicolon separated e.g., NPN Partner Community(LOGIN); NPN Partner Community(NAMED); Marketing Customer Community; Community Lite Profile</inlineHelpText>
    <label>SOCRM_SFDC_Profiles</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>